IPaletteEditor 优化了调色板的调用 MapEditorImpl 不再依赖text_addresses文件夹下的json文件